--- a/login/filldetail.html
+++ b/login/filldetail.html
@@ -29,7 +29,8 @@
     <input type="text" id="tmemail" name="tmemail" placeholder="MEMBER EMAIL" required/>
     
      <br><br>
-     <input  type="submit" value ="submit">
+
+     <a href="/payment"><input  type="submit" value ="submit"></a>
      </form>
         </div>
         </div>
