--- a/login/login.html
+++ b/login/login.html
@@ -24,7 +24,7 @@
         <br><br>
         <button id ="log3" onclick="window.location.href='/payment'">MAKE PAIMENT</button>
         <br><br>
-        <button id ="log4" onclick="window.location.href='/review_and_submit'">REVIEW AND SUBMIT</button>
+        <button id ="log4" onclick="window.location.href='/review'">REVIEW</button>
         </div>
         </div>
 </body>
