--- a/login/filldetail.html
+++ b/login/filldetail.html
@@ -30,7 +30,7 @@
     
      <br><br>
 
-     <a href="/payment"><input  type="submit" value ="submit"></a>
+     <input  type="submit" value ="submit">
      </form>
         </div>
         </div>
